Update 1.21:Eventos, Tienda de Faro y Configuración en Vivo
Signed-off-by: ElGlower <javifg291@gmail.com>