@@ -10,13 +10,13 @@ import org.bukkit.boss.BossBar;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.LeatherArmorMeta;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class TTRMatch {
 
@@ -39,6 +39,21 @@ public class TTRMatch {
     }
 
     public void startMatch() {
+        TTRCore.getInstance().getTeamHandler().loadSpawnsFromConfig();
+        TTRCore.getInstance().getTeamHandler().restartTeams();
+
+        TTRTeam red = TTRCore.getInstance().getTeamHandler().getTeam("Red");
+        TTRTeam blue = TTRCore.getInstance().getTeamHandler().getTeam("Blue");
+        for (Player p : Bukkit.getOnlinePlayers()) {
+            if (TTRCore.getInstance().getTeamHandler().getPlayerTeam(p) == null) {
+                if (red.getPlayers().size() <= blue.getPlayers().size()) {
+                    TTRCore.getInstance().getTeamHandler().addPlayerToTeam(p, "Red");
+                } else {
+                    TTRCore.getInstance().getTeamHandler().addPlayerToTeam(p, "Blue");
+                }
+            }
+        }
+
         this.status = MatchStatus.INGAME;
         this.lootSpawner = new LootSpawner();
         this.checker = new CageChecker();
@@ -53,14 +68,14 @@ public class TTRMatch {
         if (this.gameBar != null) this.gameBar.removeAll();
         this.gameBar = Bukkit.createBossBar(ChatColor.LIGHT_PURPLE + "THE TOWERS", BarColor.PURPLE, BarStyle.SOLID);
 
-        // --- CORRECCIÓN: Convertir Lista a Mapa ---
         HashMap<Location, TTRTeam> cageMap = new HashMap<>();
-        for (String teamName : TTRCore.getInstance().getConfigManager().getTeamNames()) {
-            TTRTeam team = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
-            List<Location> locs = TTRCore.getInstance().getConfigManager().getTeamCages(teamName);
-            if (locs != null) {
-                for (Location loc : locs) {
-                    cageMap.put(loc, team);
+        Set<String> teamNames = TTRCore.getInstance().getConfigManager().getTeamNames();
+        if (teamNames != null) {
+            for (String teamName : teamNames) {
+                TTRTeam team = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
+                List<Location> locs = TTRCore.getInstance().getConfigManager().getTeamCages(teamName);
+                if (locs != null && team != null) {
+                    for (Location loc : locs) cageMap.put(loc, team);
                 }
             }
         }
@@ -69,11 +84,14 @@ public class TTRMatch {
             this.checker.setCages(cageMap, 2);
             this.checker.startChecking();
         }
-        // -----------------------------------------
 
         this.lootSpawner.startSpawning();
-        TTRCore.getInstance().getWorldHandler().configureTime();
-        TTRCore.getInstance().getWorldHandler().configureWeather();
+
+        if (TTRCore.getInstance().getWorldHandler() != null) {
+            TTRCore.getInstance().getWorldHandler().configureTime();
+            TTRCore.getInstance().getWorldHandler().configureWeather();
+        }
+
         TTRCore.getInstance().getScoreboard().startScoreboardTask();
 
         startRegenTask();
@@ -87,50 +105,61 @@ public class TTRMatch {
 
     public void joinPlayerToMatch(Player player) {
         TTRTeam playerTeam = TTRCore.getInstance().getTeamHandler().getPlayerTeam(player);
-        if (playerTeam == null) return;
+        if (playerTeam == null) {
+            player.setGameMode(GameMode.SPECTATOR);
+            return;
+        }
 
         this.gameBar.addPlayer(player);
-        Location teamSpawn = TTRCore.getInstance().getConfigManager().getTeamSpawn(playerTeam.getIdentifier());
-        if (teamSpawn != null) player.teleport(teamSpawn);
+
+        Location teamSpawn = playerTeam.getSpawnPoint();
+        if (teamSpawn == null) {
+            teamSpawn = TTRCore.getInstance().getConfigManager().getTeamSpawn(playerTeam.getIdentifier());
+        }
+
+        if (teamSpawn != null) {
+            player.teleport(teamSpawn);
+        } else {
+            player.sendMessage(ChatColor.RED + "¡ERROR! No hay spawn definido.");
+        }
 
         player.getInventory().clear();
         player.setGameMode(GameMode.SURVIVAL);
+
+        if (player.getAttribute(Attribute.GENERIC_MAX_HEALTH) != null) {
+            player.getAttribute(Attribute.GENERIC_MAX_HEALTH).setBaseValue(20.0);
+        }
         player.setHealth(20);
         player.setFoodLevel(20);
-
-        if (player.getAttribute(Attribute.GENERIC_ATTACK_SPEED) != null) {
-            player.getAttribute(Attribute.GENERIC_ATTACK_SPEED).setBaseValue(4.0);
-        }
 
         equipPlayer(player, playerTeam.getIdentifier());
         this.kills.putIfAbsent(player, 0);
 
-        player.sendTitle(ChatColor.GOLD + "THE TOWERS", ChatColor.YELLOW + "Meta: " + maxPointsToWin + " Puntos", 10, 60, 20);
+        player.sendTitle(ChatColor.GOLD + "THE TOWERS", ChatColor.YELLOW + "¡A luchar!", 10, 60, 20);
     }
 
     public void equipPlayer(Player player, String teamIdentifier) {
+        TTRTeam team = TTRCore.getInstance().getTeamHandler().getTeam(teamIdentifier);
         ChatColor chatColor = TTRCore.getInstance().getConfigManager().getTeamColor(teamIdentifier);
         Color armorColor = (chatColor == ChatColor.RED) ? Color.RED : Color.BLUE;
-
         Material glassMaterial = Material.WHITE_STAINED_GLASS;
         if (chatColor == ChatColor.RED) glassMaterial = Material.RED_STAINED_GLASS;
         else if (chatColor == ChatColor.BLUE) glassMaterial = Material.BLUE_STAINED_GLASS;
-        else if (chatColor == ChatColor.GREEN) glassMaterial = Material.LIME_STAINED_GLASS;
-        else if (chatColor == ChatColor.YELLOW) glassMaterial = Material.YELLOW_STAINED_GLASS;
-
-        if (chatColor == ChatColor.GREEN) armorColor = Color.GREEN;
-        if (chatColor == ChatColor.YELLOW) armorColor = Color.YELLOW;
 
         ItemStack[] armor = new ItemStack[]{
                 new ItemStack(Material.LEATHER_BOOTS), new ItemStack(Material.LEATHER_LEGGINGS),
                 new ItemStack(Material.LEATHER_CHESTPLATE), new ItemStack(Material.LEATHER_HELMET)
         };
+
+        int protLevel = (team != null) ? team.getArmorProtectionLevel() : 0;
+
         for (ItemStack item : armor) {
             LeatherArmorMeta meta = (LeatherArmorMeta) item.getItemMeta();
             if (meta != null) {
                 meta.setColor(armorColor);
                 meta.addEnchant(Enchantment.VANISHING_CURSE, 1, true);
                 meta.setUnbreakable(true);
+                if (protLevel > 0) meta.addEnchant(Enchantment.PROTECTION, protLevel, true);
                 item.setItemMeta(meta);
             }
         }
@@ -138,6 +167,11 @@ public class TTRMatch {
         player.getInventory().addItem(new ItemStack(Material.STONE_SWORD));
         player.getInventory().addItem(new ItemStack(glassMaterial, 32));
         player.getInventory().addItem(new ItemStack(Material.BREAD, 16));
+
+        if (team != null) {
+            if (team.hasTeamSpeed()) player.addPotionEffect(new PotionEffect(PotionEffectType.SPEED, Integer.MAX_VALUE, 0, false, false));
+            if (team.hasTeamHaste()) player.addPotionEffect(new PotionEffect(PotionEffectType.HASTE, Integer.MAX_VALUE, 0, false, false));
+        }
     }
 
     private void startMatchTimer() {
@@ -146,14 +180,6 @@ public class TTRMatch {
             public void run() {
                 if (status != MatchStatus.INGAME) { this.cancel(); return; }
                 remainingTime--;
-                if (remainingTime == 300) Bukkit.broadcastMessage(ChatColor.YELLOW + "¡Quedan 5 minutos!");
-                if (remainingTime == 60) Bukkit.broadcastMessage(ChatColor.RED + "¡Queda 1 minuto!");
-                if (remainingTime <= 5 && remainingTime > 0) {
-                    for(Player p : Bukkit.getOnlinePlayers()) {
-                        p.playSound(p.getLocation(), Sound.BLOCK_NOTE_BLOCK_HAT, 1, 1);
-                        p.sendTitle(ChatColor.RED + "" + remainingTime, "", 0, 20, 0);
-                    }
-                }
                 if (remainingTime <= 0) {
                     checkWinnerAndEnd();
                     this.cancel();
@@ -166,13 +192,16 @@ public class TTRMatch {
         TTRTeam winner = null;
         int maxP = -1;
         boolean draw = false;
-        for (String teamName : TTRCore.getInstance().getConfigManager().getTeamNames()) {
-            TTRTeam t = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
-            if (t.getPoints() > maxP) {
-                maxP = t.getPoints();
-                winner = t;
-                draw = false;
-            } else if (t.getPoints() == maxP) draw = true;
+        Set<String> teamNames = TTRCore.getInstance().getConfigManager().getTeamNames();
+        if (teamNames != null) {
+            for (String teamName : teamNames) {
+                TTRTeam t = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
+                if (t.getPoints() > maxP) {
+                    maxP = t.getPoints();
+                    winner = t;
+                    draw = false;
+                } else if (t.getPoints() == maxP) draw = true;
+            }
         }
         if (draw) endMatch(null); else endMatch(winner);
     }
@@ -200,12 +229,15 @@ public class TTRMatch {
         if (this.gameBar == null) return;
         StringBuilder sb = new StringBuilder();
         int highestPoints = 0;
-        for (String teamName : TTRCore.getInstance().getConfigManager().getTeamNames()) {
-            TTRTeam team = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
-            ChatColor color = TTRCore.getInstance().getConfigManager().getTeamColor(teamName);
-            sb.append(color).append(ChatColor.BOLD).append(teamName)
-                    .append(": ").append(ChatColor.WHITE).append(team.getPoints()).append("   ");
-            if (team.getPoints() > highestPoints) highestPoints = team.getPoints();
+        Set<String> teamNames = TTRCore.getInstance().getConfigManager().getTeamNames();
+        if (teamNames != null) {
+            for (String teamName : teamNames) {
+                TTRTeam team = TTRCore.getInstance().getTeamHandler().getTeam(teamName);
+                ChatColor color = TTRCore.getInstance().getConfigManager().getTeamColor(teamName);
+                sb.append(color).append(ChatColor.BOLD).append(teamName)
+                        .append(": ").append(ChatColor.WHITE).append(team.getPoints()).append("   ");
+                if (team.getPoints() > highestPoints) highestPoints = team.getPoints();
+            }
         }
         this.gameBar.setTitle(sb.toString());
         double progress = (double) highestPoints / maxPointsToWin;
@@ -225,41 +257,62 @@ public class TTRMatch {
     public void endMatch(TTRTeam team) {
         this.status = MatchStatus.ENDED;
         cleanup();
+        TTRCore.getInstance().getTeamHandler().clearTeams();
+
+        ChatColor teamColor = (team != null) ? TTRCore.getInstance().getConfigManager().getTeamColor(team.getIdentifier()) : ChatColor.WHITE;
+        String teamName = (team != null) ? team.getIdentifier() : "Empate";
 
         List<Map.Entry<Player, Integer>> topKillers = kills.entrySet().stream()
                 .sorted(Map.Entry.<Player, Integer>comparingByValue().reversed())
                 .limit(3)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Player player : Bukkit.getServer().getOnlinePlayers()) {
-            player.setGameMode(GameMode.SPECTATOR);
-
-            ChatColor teamColor = (team != null) ? TTRCore.getInstance().getConfigManager().getTeamColor(team.getIdentifier()) : ChatColor.WHITE;
-            String teamName = (team != null) ? team.getIdentifier() : "Empate";
-
             player.sendTitle(teamColor + "GANADOR: " + teamName, ChatColor.AQUA + "GG!", 10, 100, 20);
             player.playSound(player.getLocation(), Sound.UI_TOAST_CHALLENGE_COMPLETE, 10, 1);
             player.sendMessage(" ");
             player.sendMessage(centerText(ChatColor.GOLD + "" + ChatColor.BOLD + "FIN DE LA PARTIDA"));
             player.sendMessage(centerText(ChatColor.GRAY + "Ganador: " + teamColor + teamName));
-            int i = 1;
-            player.sendMessage(centerText(ChatColor.AQUA + "--- TOP KILLERS ---"));
-            for (Map.Entry<Player, Integer> entry : topKillers) {
-                player.sendMessage(centerText("#" + i + " " + entry.getKey().getName() + ": " + entry.getValue()));
-                i++;
-            }
-            player.sendMessage(centerText(ChatColor.YELLOW + "Reiniciando en 10 segundos..."));
             player.sendMessage(" ");
+            player.sendMessage(centerText(ChatColor.AQUA + "--- TOP ASESINOS ---"));
+            if (topKillers.isEmpty()) {
+                player.sendMessage(centerText(ChatColor.GRAY + "Nadie murió..."));
+            } else {
+                int i = 1;
+                for (Map.Entry<Player, Integer> entry : topKillers) {
+                    player.sendMessage(centerText(ChatColor.YELLOW + "#" + i + " " + ChatColor.WHITE + entry.getKey().getName() + ": " + ChatColor.RED + entry.getValue()));
+                    i++;
+                }
+            }
+            player.sendMessage(" ");
+            player.sendMessage(centerText(ChatColor.YELLOW + "Reiniciando en 5 segundos..."));
+
+            player.getInventory().clear();
+            player.setGameMode(GameMode.ADVENTURE);
+
+            // RESETEAR ATRIBUTOS ANTES DE CURAR
+            if (player.getAttribute(Attribute.GENERIC_MAX_HEALTH) != null) {
+                player.getAttribute(Attribute.GENERIC_MAX_HEALTH).setBaseValue(20.0);
+            }
+            player.setHealth(20);
+            player.setFoodLevel(20);
+
+            giveLobbyItems(player);
+
+            Location lobby = TTRCore.getInstance().getConfigManager().getLobbyLocation();
+            if (lobby != null) player.teleport(lobby);
         }
 
-        TTRCore.getInstance().getWorldHandler().restoreDifficulty();
+        if (TTRCore.getInstance().getWorldHandler() != null) {
+            TTRCore.getInstance().getWorldHandler().restoreDifficulty();
+        }
 
         new BukkitRunnable() {
             @Override
             public void run() {
                 TTRCore.getInstance().resetMatchLogic();
             }
-        }.runTaskLater(TTRCore.getInstance(), 200L);
+        }.runTaskLater(TTRCore.getInstance(), 100L);
     }
 
     private String centerText(String text) {
@@ -271,24 +324,18 @@ public class TTRMatch {
         return builder.toString();
     }
 
+    public void giveLobbyItems(Player p) {
+        ItemStack star = new ItemStack(Material.NETHER_STAR);
+        ItemMeta meta = star.getItemMeta();
+        if (meta != null) {
+            meta.setDisplayName(ChatColor.YELLOW + "Selector de Equipos " + ChatColor.GRAY + "(Click Derecho)");
+            star.setItemMeta(meta);
+        }
+        p.getInventory().setItem(4, star);
+    }
+
     public void playerDeath(Player player, Player killer) {
-        new BukkitRunnable() {
-            @Override
-            public void run() {
-                if (player.isDead()) player.spigot().respawn();
-                TTRTeam team = TTRCore.getInstance().getTeamHandler().getPlayerTeam(player);
-                if (team != null) {
-                    Location loc = TTRCore.getInstance().getConfigManager().getTeamSpawn(team.getIdentifier());
-                    if (loc != null) player.teleport(loc);
-                    equipPlayer(player, team.getIdentifier());
-                }
-                if (player.getAttribute(Attribute.GENERIC_ATTACK_SPEED) != null) {
-                    player.getAttribute(Attribute.GENERIC_ATTACK_SPEED).setBaseValue(4.0);
-                }
-                if (killer != null) kills.put(killer, getKills(killer) + 1);
-                this.cancel();
-            }
-        }.runTaskLater(TTRCore.getInstance(), 2L);
+        if (killer != null) kills.put(killer, getKills(killer) + 1);
     }
 
     public MatchStatus getStatus() { return this.status; }
